--- a/FrontEnd/src/EventDetails.css
+++ b/FrontEnd/src/EventDetails.css
@@ -262,6 +262,7 @@ body{
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
     overflow-y: auto; /* Add vertical scrolling if content overflows */
     z-index:10;
+    gap: 10px;
     
 }
 
@@ -290,6 +291,15 @@ body{
     border-radius: 8px;
     overflow-y: scroll;
     
+    gap: 20px;
+    
+}
+
+#joined-users > .job-card {
+    margin-bottom: 10px;
+}
+#joined-users > .job-card:last-child {
+    margin-bottom: 0;
 }
 
 @media (max-width: 768px) {
@@ -325,6 +335,7 @@ body{
     .left-div, .right-div {
         max-width: 100%; /* Allow full width for smaller screens */
         padding: 10px; /* Adjust padding for smaller screens */
+         gap: 10px;
     }
     #player {
         flex-direction: column; /* Stack the content vertically */
